--- a/Game/Farseer Physics Engine 3.3 XNA/Farseer Physics XNA.csproj
+++ b/Game/Farseer Physics Engine 3.3 XNA/Farseer Physics XNA.csproj
@@ -82,6 +82,8 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml">
       <Private>False</Private>
     </Reference>
@@ -205,6 +207,14 @@
     <Compile Include="Common\TextureTools\MSTerrain.cs" />
     <Compile Include="Common\TextureTools\TextureConverter.cs" />
     <Compile Include="Common\Vertices.cs" />
+    <Compile Include="ComponentModel\FixtureListCollectionEditor.cs" />
+    <Compile Include="ComponentModel\ListCollectionEditor\ListCollectionEditor.cs" />
+    <Compile Include="ComponentModel\ListCollectionEditor\ListEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ComponentModel\ListCollectionEditor\ListEditorForm.Designer.cs">
+      <DependentUpon>ListEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AbstractForceController.cs" />
     <Compile Include="Controllers\BuoyancyController.cs" />
     <Compile Include="Controllers\Controller.cs" />
@@ -248,7 +258,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="ComponentModel\ListCollectionEditor\ListEditorForm.resx">
+      <DependentUpon>ListEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
