--- a/LevelEditor/Properties/Settings.settings
+++ b/LevelEditor/Properties/Settings.settings
@@ -1,7 +1,21 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="LevelEditor.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="MainFormLocation" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="MainFormSize" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">1460, 899</Value>
+    </Setting>
+    <Setting Name="mainToolBarLocation" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">10, 24</Value>
+    </Setting>
+    <Setting Name="simulationToolBarLocation" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">179, 24</Value>
+    </Setting>
+    <Setting Name="toolsToolBarLocation" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">121, 24</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
