--- a/LevelEditor/app.config
+++ b/LevelEditor/app.config
@@ -1,3 +1,27 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="LevelEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+        <LevelEditor.Properties.Settings>
+            <setting name="MainFormLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="MainFormSize" serializeAs="String">
+                <value>1460, 899</value>
+            </setting>
+            <setting name="mainToolBarLocation" serializeAs="String">
+                <value>10, 24</value>
+            </setting>
+            <setting name="simulationToolBarLocation" serializeAs="String">
+                <value>179, 24</value>
+            </setting>
+            <setting name="toolsToolBarLocation" serializeAs="String">
+                <value>121, 24</value>
+            </setting>
+        </LevelEditor.Properties.Settings>
+    </userSettings>
+</configuration>
