--- a/XMLExtendedSerialization/XMLExtendedSerialization.csproj
+++ b/XMLExtendedSerialization/XMLExtendedSerialization.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FieldInfoXMLExtensions.cs" />
     <Compile Include="IXMLCustomSerializer.cs" />
     <Compile Include="IXMLValueConverter.cs" />
+    <Compile Include="ObjectXMLExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer.cs" />
     <Compile Include="StringXMLExtensions.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="XMLCustomConverterAttribute.cs" />
     <Compile Include="XMLCustomSerializerAttribute.cs" />
     <Compile Include="XMLDoNotSerializeAttribute.cs" />
+    <Compile Include="XMLMetadataAttribute.cs" />
     <Compile Include="XMLSerializerEx.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
