--- a/LevelEditor/LevelEditor.csproj
+++ b/LevelEditor/LevelEditor.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Commands\AddLevelJointCommand.cs" />
     <Compile Include="Commands\CommandManager.cs" />
+    <Compile Include="Commands\AttachFixtureCommand.cs" />
     <Compile Include="Commands\SimulationSpeedDecreaseCommand.cs" />
     <Compile Include="Commands\SimulationSpeedIncreaseCommand.cs" />
     <Compile Include="Commands\SimulationSpeedDoubleCommand.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="ContentBuilder.cs" />
     <Compile Include="ContentService.cs" />
     <Compile Include="ErrorLogger.cs" />
+    <Compile Include="Helpers\FixtureAttachmentHelper.cs" />
     <Compile Include="Helpers\Helpers.cs" />
     <Compile Include="Helpers\JointCreationHelper.cs" />
     <Compile Include="Logic\ObjectLevelManager.cs" />
@@ -189,6 +191,10 @@
     <Content Include="Content\Textures\Shapes\object.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\addJoint1.png" />
+    <None Include="Resources\attachFixture1.png" />
+    <None Include="Resources\attachBodyFixture.png" />
+    <None Include="Resources\attachBodyFixture1.png" />
     <Content Include="Resources\mouseJoint.png" />
     <None Include="Resources\editJoint.png" />
     <None Include="Resources\placeJoint.png" />
