--- a/Game/FarseerTools/FarseerTools.csproj
+++ b/Game/FarseerTools/FarseerTools.csproj
@@ -68,11 +68,18 @@
     <Compile Include="DrawingSystem\Sprite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenSystem\ConvertUnits.cs" />
+    <Compile Include="Serializing\ObjectMetadataDictionary.cs" />
+    <Compile Include="Serializing\Texture2DXMLSerializer.cs" />
+    <Compile Include="Serializing\TextureMetadataKeys.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Farseer Physics Engine 3.3 XNA\Farseer Physics XNA.csproj">
       <Project>{0A850700-1ABB-4288-A391-6726B90EBEB9}</Project>
       <Name>Farseer Physics XNA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XMLExtendedSerialization\XMLExtendedSerialization.csproj">
+      <Project>{95FAC04B-5A7A-4869-AEBC-CE5033FE3813}</Project>
+      <Name>XMLExtendedSerialization</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
