--- a/Game/LevelEditor/LevelEditor.csproj
+++ b/Game/LevelEditor/LevelEditor.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Commands\AddLevelJointCommand.cs" />
     <Compile Include="Commands\CommandManager.cs" />
     <Compile Include="Commands\AttachFixtureCommand.cs" />
+    <Compile Include="Commands\AddObjectPartsToObjectCommand.cs" />
+    <Compile Include="Commands\AddGameObjectJointCommand.cs" />
+    <Compile Include="Commands\AttachGameObjectFixtureCommand.cs" />
     <Compile Include="Commands\SaveLevelCommand.cs" />
     <Compile Include="Commands\OpenLevelCommand.cs" />
     <Compile Include="Commands\PropertyGridChangeParamCommand.cs" />
@@ -90,6 +93,9 @@
     </Compile>
     <Compile Include="StopwatchGameTimer.cs" />
     <Compile Include="TabHiddenHeadersControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="XnaControls\ObjectScreen.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="XnaControls\PreviewScreen.cs">
