--- a/Game/XMLExtendedSerialization/XMLExtendedSerialization.csproj
+++ b/Game/XMLExtendedSerialization/XMLExtendedSerialization.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Attributes\XMLCustomSerializerAttribute.cs" />
     <Compile Include="Attributes\XMLDoNotSerializeAttribute.cs" />
     <Compile Include="Attributes\XMLMetadataAttribute.cs" />
+    <Compile Include="SerializerException.cs" />
     <Compile Include="SerializerHelpers.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="XMLSerializerEx.cs" />
